--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "fuse.js": "^7.1.0",
     "ioredis": "^5.8.2",
     "lightweight-charts": "^5.1.0",
     "next": "^16.1.1",
