feat: Google OIDC 인증 시스템 + 페이지/API 보호 + Stocks 페이지 + 공유 개선
- Auth.js v5 (next-auth@beta) Google OIDC 로그인 (이메일만 수집)
- JWT 세션 (30일), HTTPS 환경 Secure 쿠키 자동 적용
- 미들웨어 + 페이지 레벨 이중 인증 체크 (dev/prod 모두 동작)
- 보호 라우트: /stocks, /stock/[symbol], /compare
- 공개 라우트: /, /analysis, /stock/[symbol]/analysis/**, /login, /privacy, /terms
- API 라우트 requireAuth() 보호 (7개 stock API + stocks POST)
- 새 페이지: 로그인, Stocks 워치리스트, 개인정보처리방침, 서비스 약관
- Navbar: 이메일 기반 결정론적 색상 아바타, 로그인/로그아웃 버튼
- ShareButtons: 관리자 전용 X/Threads, KakaoTalk/WhatsApp 추가
- AddStockCard: 비로그인 시 잠금 표시
- 보안: callbackUrl 오픈 리다이렉트 방지, .gitignore .env.* 추가
- i18n: 한/영 인증·법적·공유 메시지 추가

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,26 @@
-# Database (Docker Compose)
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/invest?schema=public"
+# ============================================
+# Investory 환경변수 (.env.example)
+# 이 파일을 .env.local 로 복사한 뒤 값을 채우세요.
+# cp .env.example .env.local
+# ============================================
 
-# Redis (Docker Compose)
-REDIS_URL="redis://localhost:6379"
-REDIS_PASSWORD=""
+# ── Auth.js (Google OIDC) ──
+AUTH_SECRET=                          # npx auth secret 으로 생성
+AUTH_GOOGLE_ID=                       # Google Cloud Console OAuth Client ID
+AUTH_GOOGLE_SECRET=                   # Google Cloud Console OAuth Client Secret
+AUTH_TRUST_HOST=true                  # 프로덕션 환경 필수
 
-# API Keys
-ALPHA_VANTAGE_API_KEY="your_alpha_vantage_key"
-FINNHUB_API_KEY="your_finnhub_key"
-POLYGON_API_KEY="your_polygon_key"
+# ── 관리자 ──
+ADMIN_EMAIL=                          # 관리자 Google 이메일 (X/Threads 공유 권한)
 
-# Application
-NODE_ENV="development"
-PORT=3000
-NEXT_PUBLIC_BASE_URL="http://localhost:3000"  # 배포 시 https://your-domain.com 으로 변경
+# ── 외부 API ──
+FINNHUB_API_KEY=                      # https://finnhub.io
+ALPHA_VANTAGE_API_KEY=                # https://www.alphavantage.co
 
-# Data Collection Schedule (cron format)
-MARKET_DATA_CRON="0 */6 * * *"  # Every 6 hours
-FUNDAMENTAL_DATA_CRON="0 2 * * *"  # Daily at 2 AM
+# ── Redis ──
+REDIS_URL=redis://localhost:6379      # Redis 연결 URL
+REDIS_PASSWORD=                       # Redis 비밀번호 (없으면 비워두기)
+
+# ── Public (클라이언트 번들에 포함) ──
+NEXT_PUBLIC_BASE_URL=https://investory.kro.kr
+NEXT_PUBLIC_KAKAO_JS_KEY=             # Kakao JavaScript SDK 앱 키 (카카오톡 공유)
