--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^5.8.2",
     "lightweight-charts": "^5.1.0",
     "next": "^16.1.1",
+    "next-auth": "^5.0.0-beta.30",
     "next-intl": "^4.8.3",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
