--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,24 @@
 # ============================================
-# Investory 환경변수 (.env.example)
-# 이 파일을 .env.local 로 복사한 뒤 값을 채우세요.
-# cp .env.example .env.local
+# Investory 환경변수 템플릿
+# 이 파일을 복사하여 .env.local (개발) 또는 .env.production (프로덕션) 생성
 # ============================================
 
-# ── Auth.js (Google OIDC) ──
+# --- Auth.js (Google OIDC) ---
 AUTH_SECRET=                          # npx auth secret 으로 생성
+AUTH_URL=https://example.com          # 프로덕션 공개 URL (리버스 프록시 뒤에서 필수)
+AUTH_TRUST_HOST=true                  # 리버스 프록시(Caddy) 뒤에서 호스트 신뢰
 AUTH_GOOGLE_ID=                       # Google Cloud Console OAuth Client ID
 AUTH_GOOGLE_SECRET=                   # Google Cloud Console OAuth Client Secret
-AUTH_TRUST_HOST=true                  # 프로덕션 환경 필수
-
-# ── 관리자 ──
 ADMIN_EMAIL=                          # 관리자 Google 이메일 (X/Threads 공유 권한)
 
-# ── 외부 API ──
-FINNHUB_API_KEY=                      # https://finnhub.io
-ALPHA_VANTAGE_API_KEY=                # https://www.alphavantage.co
+# --- 외부 API ---
+FINNHUB_API_KEY=                      # Finnhub 실시간 시세 API
+ALPHA_VANTAGE_API_KEY=                # Alpha Vantage 재무 데이터 API
 
-# ── Redis ──
-REDIS_URL=redis://localhost:6379      # Redis 연결 URL
-REDIS_PASSWORD=                       # Redis 비밀번호 (없으면 비워두기)
+# --- Redis 캐시 ---
+REDIS_URL=                            # Redis 접속 URL (예: redis://localhost:6379)
+REDIS_PASSWORD=                       # Redis 비밀번호 (선택)
 
-# ── Public (클라이언트 번들에 포함) ──
-NEXT_PUBLIC_BASE_URL=https://investory.kro.kr
+# --- 공개 변수 (클라이언트 번들에 포함) ---
+NEXT_PUBLIC_BASE_URL=https://example.com
 NEXT_PUBLIC_KAKAO_JS_KEY=             # Kakao JavaScript SDK 앱 키 (카카오톡 공유)
