feat: Neon PostgreSQL + Drizzle ORM 도입 (유저/구독 관리 기반)
- JWT 콜백에서 로그인 시 유저 upsert + free 구독 자동 생성
- onConflictDoUpdate/DoNothing으로 atomic upsert (레이스 컨디션 방지)
- requireSubscription(), requirePageSubscription() 구독 가드 추가
- Session/JWT 타입 확장 (id, plan, planStatus)
- no-op service worker 추가 (PWA manifest로 인한 404 제거)

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ REDIS_PASSWORD=                       # Redis 비밀번호 (선택)
 # --- 공개 변수 (클라이언트 번들에 포함) ---
 NEXT_PUBLIC_BASE_URL=https://example.com
 NEXT_PUBLIC_KAKAO_JS_KEY=             # Kakao JavaScript SDK 앱 키 (카카오톡 공유)
+
+# Neon PostgreSQL
+DATABASE_URL=
