perf: reduce memory usage for Next.js build on low-RAM servers

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:low-mem": "NODE_OPTIONS='--max-old-space-size=1024' next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
